--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,83 @@ input[type="range"]::-webkit-slider-runnable-track:hover {
     justify-content: center;
 }
 
+/* Game Section */
+
+.game-info-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.game-info-bar select {
+    color: #000000;
+    background-color: none;
+}
+
+.content-wrapper-game {
+    max-width: 100%;
+    text-align: center; /* Centers text and inline elements horizontally within the section */
+    margin: 50px auto; /* Centers the section container itself within the page */
+    padding: 20px; /* Adds padding around the section content for spacing */
+    height: 100vh;
+}
+
+.game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-container {
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    gap: 20px;
+}
+
+.pattern-button {
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+    background-color: #000000;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+#btn1 { background-color: red; }
+#btn2 { background-color: green; }
+#btn3 { background-color: blue; }
+#btn4 { background-color: yellow; }
+
+.pattern-button:hover {
+    background-color: whitesmoke;
+    transition: 1s;
+}
+
+.pattern-button.active {
+    opacity: 1;
+}
+
+.controls {
+    display: inline;
+    margin-top: 20px;
+}
+
+#message {
+    font-size: 1.2em;
+    margin: 10px;
+}
+
+#player-score {
+    font-size: 1.2em;
+    margin: 10px;
+}
+
+.player-instructions {
+    margin: 0;
+}
+
 /* Footer Section */
 
 footer {
