--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -104,7 +104,7 @@ header nav ul li a:hover {
 }
 
 .container-wrapper {
-    background: url(./pexels-felixmittermeier-957061.jpg);
+    background: url(/pexels-felixmittermeier-957061.jpg);
     margin: 150px auto;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     border-radius: 20px;
