--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -113,7 +113,7 @@ header nav ul li a:hover {
 }
 
 /* Additional styling for buttons/links inside the section */
-.content-wrapper-home .content-wrapper, .cta-button, .reset-button, .settings-button {
+.content-wrapper-home .content-wrapper, .cta-button, .reset-button, .settings-button, .cta-game-button {
     transition: 2s;
     border: none;
     display: inline-block; /* Allows padding and margins to be applied like a button */
@@ -125,6 +125,15 @@ header nav ul li a:hover {
     border-radius: 10px; /* Rounds the corners of the button */
     font-size: 1.5rem;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.cta-game-button:hover {
+    color: rgb(255, 255, 255);
+}
+
+.cta-game-button:active {
+    color: hsla(0, 0%, 85%, 0.29); /* Sets the text color to white for readability */
+    transition: 0.5s;
 }
 
 .cta-button:hover, .reset-button:hover, .settings-button:hover {
@@ -299,7 +308,6 @@ input[type="range"]::-webkit-slider-runnable-track:hover {
 
 .pattern-button:hover {
     background-color: whitesmoke;
-    transition: 1s;
 }
 
 .pattern-button.active {
