--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 
+:root { /* Variables for shadow on text/sections etc background colour also */
+    --text-shadow-nav: 0px 2px 14px rgb(255, 255, 255);
+    --text-shadow-h1: 0px 2px 24px rgb(138, 43, 226);
+    --text-shadow-paragraph: 0px 2px 17px rgb(132, 0, 255);
+    --text-shadow-buttons: 0px 4px 27px rgb(255, 255, 255);
+}
+
 /* Remove all default margin and padding */
 * {
     margin: 0;
@@ -18,8 +25,9 @@ html, body {
 }
 
 body {
-    background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(74,0,127,1) 90%, rgba(52,9,121,1) 100%);
+    background: #000000;
+    /* background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(74,0,127,1) 90%, rgba(52,9,121,1) 100%); */
 }
 
 /* Style for the header section */
@@ -36,6 +44,7 @@ header {
 .website-logo-header {
     position: absolute;
     left: 30px;
+    
 }
 
 nav {
@@ -77,6 +86,7 @@ header nav ul li a:hover {
     text-decoration: none; /* Adds underline when hovering to indicate interactivity */
     color: #ffffff;
     transition: 0.5s;
+    text-shadow: var(--text-shadow-nav);
 }
             
 /* Center content inside each section */
@@ -85,39 +95,46 @@ header nav ul li a:hover {
     max-width: 100%;
     text-align: center; /* Centers text and inline elements horizontally within the section */
     padding: 20px; /* Adds padding around the section content for spacing */
-    box-shadow: rgb(0, 0, 0) 5px 20px 24px;
-
+    box-shadow: rgba(137, 43, 226, 0.72) 0px 20px 44px , rgba(0, 0, 0, 0.555) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.555) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.555) 0px -79px 40px 0px inset;
 }
 
 .content-wrapper {
+    margin: 5rem 0 5rem 0;
     max-width: 100%;
     text-align: center; /* Centers text and inline elements horizontally within the section */
     padding: 20px; /* Adds padding around the section content for spacing */
 }
 
 .container-wrapper-home {
-    margin: 150px auto;
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     border-radius: 20px;
-    max-width: 60%;
     padding: 20px 100px 20px 100px;
+}
+
+.container-wrapper-home img {
+    width: 100px;
+    height: 100px;
 }
 
 .container-wrapper {
     background: url(../Resources/pexels-felixmittermeier-957061.jpg);
     margin: 150px auto;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    box-shadow: rgba(137, 43, 226, 0.72) 0px 2px 100px 24px, rgba(0, 0, 0, 0.555) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.555) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.555) 0px -79px 40px 0px inset;
     border-radius: 20px;
-    max-width: 60%;
+    max-width: 70%;
     padding: 20px 100px 20px 100px;
 }
 
 /* Additional styling for buttons/links inside the section */
-.content-wrapper-home .content-wrapper, .cta-button, .reset-button, .settings-button, .cta-game-button {
-    transition: 2s;
+.content-wrapper-home .content-wrapper, .cta-button, .reset-button, .settings-button, .cta-game-button, .top-button {
+    transition: .2s;
     border: none;
     display: inline-block; /* Allows padding and margins to be applied like a button */
-    margin: 10px 10px 20px 10px; /* Adds space between each link or button */
+    margin: 20px 10px 20px 10px; /* Adds space between each link or button */
     padding: 10px 40px; /* Adds space inside the link for a button-like appearance */
     background-color: rgb(74, 0, 127); /* Sets a background color for contrast */
     color: hsla(0, 0%, 85%, 0.29); /* Sets the text color to white for readability */
@@ -127,8 +144,9 @@ header nav ul li a:hover {
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-.cta-game-button:hover {
+.cta-game-button:hover, .top-button:hover {
     color: rgb(255, 255, 255);
+    text-shadow: var(--text-shadow-buttons);
 }
 
 .cta-game-button:active {
@@ -138,8 +156,14 @@ header nav ul li a:hover {
 
 .cta-button:hover, .reset-button:hover, .settings-button:hover {
     color: rgb(255, 255, 255);
-    transform: scale(1.2);
-    transition: 1.5s;
+    text-shadow: var(--text-shadow-buttons);
+    transform: scale(1.1);
+    transition: .5s;
+}
+
+.hero-buttons {
+    display: flex;
+    justify-content: center;
 }
 
 /* General Styling */
@@ -147,12 +171,18 @@ header nav ul li a:hover {
 h1 {
     margin: 20px; /* Adds space between */
     font-size: 3rem;
+    text-shadow: var(--text-shadow-h1);
+}
+
+h2 {
+    text-shadow: var(--text-shadow-h1);
 }
 
 p {
     margin: 20px auto; /* Adds space between */
     padding: 0 0 20px 0; /* Adds space between */
     font-size: 1.5rem;
+    text-shadow: var(--text-shadow-paragraph);
 }
 
 .in-text-link {
@@ -161,27 +191,27 @@ p {
 }
 
 .in-text-link:hover {
-    color:blueviolet;
+    color:rgb(138, 43, 226);
     transition: color 0.3s ease; /* Smooth transition effect */
     text-decoration: none;
+}
+
+.tip-text {
+    font-size: 1.7rem;
+    letter-spacing: 1px;
+    color: #9500ff;
+}
+
+.tip-text i {
+    color: #ffffff;
 }
 
 /* Optional: Center-align content in the difficulty card container */
 .difficulty-card-container {
     display: flex; /* Makes the cards layout flexible */
     justify-content: center; /* Centers the cards horizontally */
-    gap: 20px; /* Adds space between each card */
     flex-wrap: wrap; /* Allows wrapping for smaller screens */
     padding-top: 20px; /* Adds space at the top of the container */
-}
-
-.difficulty-cards {
-    background-color: #000000; /* Light background for each card */
-    margin: 0 20px 20px 20px;
-    padding: 20px; /* Adds space inside each card */
-    border-radius: 5px; /* Rounds the corners of each card */
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Adds shadow for depth */
-    text-align: center; /* Centers content inside each card */
 }
 
 /* Leaderboard Table */
@@ -210,8 +240,9 @@ td {
 /* Settings Page */
 
 .settings-slider {
-    margin: 5rem;
+    margin: 3rem;
     font-size: 2rem;
+    text-shadow: var(--text-shadow-h1);
 }
 
 input[type="range"]::-webkit-slider-runnable-track {
@@ -228,6 +259,7 @@ input[type="range"]::-webkit-slider-runnable-track:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: 100vh;
 }
 
 /* Game Section */
@@ -256,6 +288,7 @@ input[type="range"]::-webkit-slider-runnable-track:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 10rem;
 }
 
 .button-container-easy {
