--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -195,7 +195,7 @@ header nav ul li a:hover {
 }
 
 /* Additional styling for buttons/links inside the section */
-.content-wrapper-home .content-wrapper, .cta-button, .reset-button, .settings-button, .cta-game-button, .top-button {
+.content-wrapper-home .content-wrapper, .cta-button, .reset-button, .settings-button, .cta-game-button, .top-button, .save-settings {
     transition: .2s;
     border: none;
     display: inline-block; /* Allows padding and margins to be applied like a button */
@@ -209,12 +209,12 @@ header nav ul li a:hover {
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-.cta-game-button:hover, .top-button:hover {
+.cta-game-button:hover, .top-button:hover, .game-info-bar select:hover {
     color: rgb(255, 255, 255);
     text-shadow: var(--text-shadow-buttons);
 }
 
-.cta-game-button:active {
+.cta-game-button:active, .game-info-bar select:active {
     color: hsla(0, 0%, 85%, 0.29); /* Sets the text color to white for readability */
     transition: 0.5s;
 }
@@ -224,6 +224,14 @@ header nav ul li a:hover {
     text-shadow: var(--text-shadow-buttons);
     transform: scale(1.1);
     transition: .5s;
+}
+
+.save-settings, .top-button {
+    animation: float 4s ease-in-out infinite;
+}
+
+.save-settings:hover, .top-button:hover {
+    animation: none;
 }
 
 .hero-buttons {
@@ -336,9 +344,19 @@ input[type="range"]::-webkit-slider-runnable-track:hover {
     align-items: center;
 }
 
+.game-info-bar h2 {
+    font-size: 1.5rem;
+}
+
 .game-info-bar select {
-    color: #000000;
-    background-color: none;
+    border-radius: 10px;
+    color: hsla(0, 0%, 85%, 0.29);
+    background-color: rgb(74, 0, 127);
+    border: solid;
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    transition: 0.5s;
 }
 
 .content-wrapper-game {
