--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -47,8 +47,6 @@ html, body {
 
 body {
     background: #000000;
-    /* background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(74,0,127,1) 90%, rgba(52,9,121,1) 100%); */
 }
 
 .bg-image {
@@ -307,8 +305,8 @@ th {
 }
 
 td {
-    background: none;
-    background-color: none;
+    background: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, 0);
 }
 
 /* Settings Page */
